<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activa Ciudad</string>
    <string name="action_settings">Settings</string>

    <!-- Inicio Login Activity -->
    <string name="title_activity_login">LoginActivity</string>

    <!-- Fin Login Activity -->
    <string name="ingresa">Ingresa</string>
    <string name="mail">Mail:</string>
    <string name="passs">Contraseña:</string>
    <string name="userNew">¿Aún no eres usuario?</string>
    <string name="registrate">Regístrate!</string>
    <!-- Fin Login Activity -->


    <!-- Levantamiento Activity -->
    <string name="title_activity_levantamiento">LevantamientoActivity</string>
    <string name="levantamientoLibre">Levantamiento libre</string>
    <string name="LevantamientoProy">Levantamiento por\nproyecto</string>
    <!-- Fin Levantamiento Activity -->


    <!-- Tipo de levantamiento -->
    <string name="title_activity_tipo_levantamiento">TipoLevantamientoActivity</string>
    <string name="tipoLevantamiento">Uso</string>
    <string name="subtipoLevantamiendo">Giro</string>
    <string name="responsable">Responsable</string>
    <string name="zona">Zona</string>
    <string name="manzana">Manzana</string>
    <string name="NoCedula">Nº de cedula</string>
    <string name="fecha">Fecha</string>
    <string name="btnSiguiente">Siguiente</string>
    <!-- Fin Tipo de levantamiento -->


    <!-- Content Description -->
    <string name="imgDescription">imagen</string>
    <string name="hello_world">Hello world!</string>
    <!-- Fin Content Description -->


    <!-- Formulario Tipo Levantamiento -->
    <string name="title_activity_formulario_piso">FormularioPisoActivity</string>
    <string name="botonNuevoLote">Nuevo Lote</string>
    <string name="botonEnviar">Enviar</string>
    <string name="plantaBajaStr">Planta Baja</string>
    <string name="plantaPrimStr">1º Nivel</string>
    <string name="plantaSeguStr">2º Nivel</string>
    <string name="plantaTercStr">3º Nivel</string>
    <string name="plantaCuarStr">4º Nivel</string>
    <string name="usoStr">Uso</string>
    <string name="giroStr">Giro</string>
    <string name="edoStr">Edo</string>
    <!-- Fin Formulario Tipo Levantamiento -->


    <!-- Strings de errores -->
    <string name="errEdtxZero">Campo vacio</string>
    <string name="title_activity_tipo_levantamiento_libre">TipoLevantamientoLibre</string>

</resources>
