<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".LoginActivity" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" >

        <TextView
            android:id="@+id/Ingresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/ingresa"
            android:textColor="#FFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Ingresa"
            android:layout_marginTop="10dp"
            android:text="@string/mail"
            android:textColor="#FFF"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/EdtMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Mail"
            android:layout_below="@+id/Mail"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textEmailAddress" >
        </EditText>

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EdtMail"
            android:layout_marginTop="5dp"
            android:text="@string/passs"
            android:textColor="#FFF"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/EdtPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pass"
            android:layout_below="@+id/pass"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/loginbotonregistro" />

        <TextView
            android:id="@+id/usuarioNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnRegistrarse"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/userNew"
            android:textColor="#FFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_below="@+id/EdtPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/comenzar" />

    </RelativeLayout>

</RelativeLayout>
